# aoc

aoc2024/: .gitignore
aoc2024/elixir/: README.md  mix.exs  run.exs
aoc2024/elixir/lib/: aoc.ex  day10.ex  day11.ex  day12.ex  day13.ex  day14.ex  day15.ex  day16.ex  day17.ex  day18.ex  day19.ex  day20.ex  day21.ex  day22.ex  day23.ex  day24.ex  day25.ex  progress.ex  util.ex
aoc2024/gleam/: gleam.toml  manifest.toml
aoc2024/gleam/.github/workflows/: test.yml
aoc2024/gleam/src/: aoc.gleam  util.gleam
aoc2024/go/: go.mod  main.go
aoc2024/go/internal/day20/: day20.go
aoc2024/go/internal/input/: input.go
aoc2024/input_tests/: README.md
aoc2024/ocaml/: README.md  aoc2024.opam  dune-project
aoc2024/ocaml/lib/: day1.ml  day11.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune  util.ml
aoc2025/: .gitignore
aoc2025/ocaml/: README.md  aoc2025.opam  dune-project
aoc2025/ocaml/lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  dune  util.ml
