(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github alamillac/aoc))

(authors "Andres Lamilla")

(maintainers "Andres Lamilla")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "AOC 2024")
 (description "Advent of code 2024")
 (depends ocaml dune re)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
